PortableTypeSerializer cleanup & generification (main -> ce/main @ 78639)
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 78640]